[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imvdb"
version = "0.1.0"
authors = [
    { name = "doidio", email = "88172828@qq.com" },
]
description = "volumetric image in openvdb format"
readme = "README.md"
requires-python = "3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/doidio/imvdb"
"Bug Tracker" = "https://github.com/doidio/imvdb/issues"
