[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/doidio/imvdb"
"Bug Tracker" = "https://github.com/doidio/imvdb/issues"

[project]
name = "imvdb"
authors = [
    { name = "doidio", email = "88172828@qq.com" },
]
description = "volumetric image in openvdb format"
readme = "README.md"
requires-python = "==3.10.*"
keywords = ["one", "two"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click", "numpy", "itk",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "imvdb.__version__"}

[tool.setuptools.package-data]
"*" = ["*"]